applications/approvalProcesses/objects/SaiMar30Obj1__c.object
<CustomObject>
    <fields>
        <fullName>Obj1Pr2__c</fullName>
        <label>Obj1Pr2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obj1f1__c</fullName>
        <label>Obj1f1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obj1f2__c</fullName>
        <label>Obj1f2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>SaiMar30Obj1</label>
    <nameField>
        <label>SaiMar30Obj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SaiMar30Obj1s</pluralLabel>
    <recordTypes>
        <fullName>RC3</fullName>
        <active>true</active>
        <label>RC3</label>
    </recordTypes>
    <recordTypes>
        <fullName>RC4</fullName>
        <active>true</active>
        <label>RC4</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>